Fixed contrast ratio on the archive page pagination

--- a/src/scss/_containers.scss
+++ b/src/scss/_containers.scss
@@ -87,8 +87,8 @@
 
     &.active {
       background-color: $secondary-color;
-      color: $accent-color;
-    }
+      color: $text-color-primary;
+    } 
 
     &:hover:not(.active) {
       background-color: $accent-color;
